<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.local.android.teleasistenciaticplus.act.user.actUserOptionsZonaSegura">

    <TextView
        android:id="@+id/zona_segura_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/zona_segura_label" />

    <CheckBox
        android:id="@+id/caidas_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/caidas_activar" />

    <Button
        android:id="@+id/caidas_boton_arrancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/caidas_checkbox"
        android:layout_alignStart="@+id/caidas_checkbox"
        android:layout_below="@+id/caidas_checkbox"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/caidas_boton_arrancar" />

    <Button
        android:id="@+id/caidas_boton_parar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/caidas_checkbox"
        android:layout_alignRight="@+id/caidas_checkbox"
        android:layout_alignTop="@+id/caidas_boton_arrancar"
        android:onClick="onClick"
        android:text="@string/caidas_boton_parar" />

    <TextView
        android:id="@+id/caidas_texto_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/caidas_texto_estado_activo" />


</RelativeLayout>
